--- a/static/css/main.css
+++ b/static/css/main.css
@@ -46,7 +46,7 @@ table td, table th{
 .fully-centered-div {
     margin: auto;
     width: 200px;
-    height: 300px;
+    height: 325px;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -65,6 +65,20 @@ table td, table th{
     margin: 10px 0;
 }
 
+.p-dropdown{
+    vertical-align: middle;
+    height: 24px;
+}
+
 .p-inputtext{
     padding: 0.2rem 0.5rem;
+}
+
+.button-label{
+    color: blue;
+    cursor:pointer;
+}
+
+.parameter-requirement-fulfilled{
+    background-color: green;
 }
