some changes to visualization

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -82,3 +82,8 @@ table td, table th{
 .parameter-requirement-fulfilled{
     background-color: green;
 }
+
+.filter-table td, .filter-table{
+    border: none;
+    padding: 1px;
+}
